Jetty 12.0.x offer returns processor (#7624)
Refactored handers to the the style of a Handler returning a Request.Processor

Co-authored-by: Simone Bordet <simone.bordet@gmail.com>